# Asteroids

./: CMakeLists.txt  README.md  setup_asteroids.sh
include/: Asteroid.hpp  Bullet.hpp  CollisionManager.hpp  Constants.hpp  DebugUtils.hpp  GameObject.hpp  GameObjectManager.hpp  GameState.hpp  Ship.hpp
src/: CollisionManager.cpp  GameState.cpp  main.cpp
tests/: AsteroidTest.cpp  BulletTest.cpp  CMakeLists.txt  GameStateTest.cpp  ShipTest.cpp
